Add resume and update download link

--- a/index.html
+++ b/index.html
@@ -301,9 +301,12 @@ footer a:hover{
     <p>Java backend developer with strong OOP, JDBC, MySQL and clean coding practices. Passionate about scalable applications and real-world problem solving.</p>
 
     <div class="btns">
-      <a href="c:\Users\degac\Downloads\Koti_Balaji_Resume_ZoomVersion.pdf" download>Download CV</a>
-      <a href="https://www.linkedin.com/in/degachichu-koti-balaji-49951724a/" target="_blank">LinkedIn</a>
-      <a href="https://github.com/Kotibalaji" target="_blank">GitHub</a>
+       <a href="Degachichu_Koti_Balaji_Resume.pdf" download>
+    Download CV
+  </a>
+
+       <a href="https://www.linkedin.com/in/degachichu-koti-balaji-49951724a/" target="_blank">LinkedIn</a>
+       <a href="https://github.com/Kotibalaji" target="_blank">GitHub</a>
     </div>
 
     <div class="socials">
