--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@ footer a:hover{
     <p>Java backend developer with strong OOP, JDBC, MySQL and clean coding practices. Passionate about scalable applications and real-world problem solving.</p>
 
     <div class="btns">
-       <a href="Degachichu_Koti_Balaji_Resume.pdf" download>
-    Download CV
-  </a>
+     <a href="Degachichu_Koti_Balaji_Resume.pdf" download>Download CV
+</a>
+
 
        <a href="https://www.linkedin.com/in/degachichu-koti-balaji-49951724a/" target="_blank">LinkedIn</a>
        <a href="https://github.com/Kotibalaji" target="_blank">GitHub</a>
@@ -368,7 +368,7 @@ footer a:hover{
   <div class="card">
     <h2>Education</h2>
     <div class="edu">B.Tech (ECE) – SVCE Tirupati | CGPA: 8.22</div>
-    <div class="edu">Intermediate (MPC) – Sri Chaitanya | 95.7%</div>
+    <div class="edu">Intermediate (MPC) – Sri Chaitanya | 95.7</div>
     <div class="edu">10th Standard – Sri Chaitanya | CGPA: 9.8</div>
   </div>
 </section>
